# complex-plotter

./: .gitignore  CMakeLists.txt  CMakePresets.7z  CONTRIBUTING.md  README.md  build_web.bat  devlog.md  plotter.frag  plotter.vert
.github/workflows/: linux.yml  web-deploy.yml
build-web/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-web/dependencies/: cmake_install.cmake
build-web/src/: cmake_install.cmake  complex-plotter.js  complex-plotter.wasm
build-web/src/shaders/: embedded_shaders.h
dependencies/: CMakeLists.txt
dependencies/learnopengl/include/: emscripten_browser_clipboard.h
dependencies/learnopengl/include/VAO/: VAO.h
dependencies/learnopengl/include/VBO/: VBO.h
dependencies/learnopengl/include/camera/: camera.h
dependencies/learnopengl/include/shader/: shader.h
dependencies/learnopengl/include/texture/: texture.h
dependencies/learnopengl/src/: VAO.cpp  shader.cpp
docs/: advanced.md  features.md  optimization.md  the-basics.md
docs/manim/: basics.py  complex.py  test.py  what-is-this.md
src/: CMakeLists.txt  app.aps  app.rc  generate_cpp_complex_functions.cpp  glad_include_guard.h  index.html  main.cpp  math_transpiler.py
src/compiler/: compiler_shader.cpp  compiler_shader.h
src/cpu_drawing/: cpu_render.h
src/glsl_generated/: generated_big_math.h  generated_math_mapper.h  types.h
src/glsl_transpiled/: glsl_big_number.cpp  glsl_big_number.h  glsl_constants.h  glsl_types.h
src/graphics/: graphics.cpp  graphics.h  picker.cpp  picker.h  ui.cpp  ui.h  ui_init.cpp  ui_init.h
src/graphics/3d/: camera_state.cpp  camera_state.h  mesh.cpp  mesh.h
src/high_precision/: high_precision_constant.cpp  high_precision_constant.h
src/higher_order/: derivative.cpp  derivative.h  higher_order.cpp  higher_order.h
src/interactions/: export.cpp  export.h  interactions.cpp  interactions.h
src/parser/: checker.cpp  checker.h  parser.cpp  parser.h  rpn.cpp  rpn.h  simplifier.cpp  simplifier.h  tokenizer.cpp  tokenizer.h  types.h  validator.cpp  validator.h
src/preprocessor/: preprocessor.cpp  preprocessor.h  string_builder.cpp  string_builder.h  transpiler.cpp  transpiler.h
src/scripts/: embed_shaders.cmake
src/shaders/: complex_functions.frag  embedded_shaders.h  high_precision.frag  high_precision_footer.frag  high_precision_footer_optimized.frag  high_precision_functions.frag  high_precision_functions_optimized.frag  high_precision_header.frag  picker.frag  plotter.frag  plotter.vert  plotter3d.frag  plotter3d.vert
src/transformer/: constant.cpp  constant.h  operator.cpp  operator.h  transformer.cpp  transformer.h  tree.cpp  tree.h
src/types/: type_mapper.cpp  type_mapper.h  types.h
tests/: parser.cpp
web-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
web-build/dependencies/: cmake_install.cmake
web-build/src/: cmake_install.cmake  complex-plotter.html  complex-plotter.js  complex-plotter.wasm
